bug#57396 a01_patch.diff MRR empty range sets wrong index attr id